# ecommerce

./: Cargo.toml  rustfmt.toml
docs/: resources.md
docs/adr/: 0000-configuration.md  0001-programming-language.md  0002-authorization.md  0003-classifying-data.md  0004-module-system.md
docs/template/: adr-madr.md
src/: cli.rs  config.rs  currency.rs  identifier.rs  main.rs
src/config/: validation.rs
test/data/: config.ron
